--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
 
         <section class="hero__section">
-            <img src="https://images.unsplash.com/photo-1483381616603-8dde934da56f?q=80&w=1776&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="hero__image">
+            <img src="https://images.unsplash.com/photo-1532329683184-6ffd13057d1c?q=80&w=1775&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Smiling Old Couple Walking in Yellow Flowers" class="hero__image">
             <div class="hero__overlay">
                 <p>THIS IS A DEMO</p>
                 <p class="small__subheader">Place something here</p>
