Changed the font size for the navigation menu and added a blockquote section to divide main content

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
         </section>
 
     </header>
-    <main></main>
+    <main>
+
+        <blockquote class="blockQuote__1">
+            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, perspiciatis.</q>
+        </blockquote>
+
+    </main>
     <footer></footer>
 </body>
 </html>
