Made Changes to the hero page along with the blockquote section

--- a/index.html
+++ b/index.html
@@ -43,11 +43,19 @@
         </section>
 
     </header>
-    <main>
-
+    <main class="wrapper">
+        <!-- THis is block quote to divide the section from the rest of the content -->
         <blockquote class="blockQuote__1">
             <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, perspiciatis.</q>
         </blockquote>
+
+        <section class="mainContent__section1">
+            <img src="https://images.unsplash.com/photo-1658314756410-bc606c1d9306?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <div class="mainContent__section1__description">
+                <h2>Medicare Basic Contact</h2>
+                <p class="basic__info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta veniam aut sit debitis dolores. Maiores.</p>
+            </div>
+        </section>
 
     </main>
     <footer></footer>
