Added an additional role to the main content

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </section>
 
     </header>
+    
     <main class="wrapper">
         <!-- THis is block quote to divide the section from the rest of the content -->
         <blockquote class="blockQuote__1">
@@ -67,8 +68,18 @@
             <img src="https://images.unsplash.com/photo-1534630103086-5b1c106f74e0?q=80&w=2062&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Couple overlooking the lake holding hands">
         </section>
 
+        <section class="mainContent__section3">
+            <img src="https://images.unsplash.com/photo-1605812830455-2fadc55bc4ba?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Father Holding child on his neck">
+            <div class="mainContent__section3__description">
+                <h2>Life Policy</h2>
+                <p class="basic__info3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nihil hic reprehenderit laboriosam accusantium autem corrupti eligendi sit quod quam dolor quaerat, praesentium tempore assumenda fugiat nesciunt? Vero, distinctio culpa!</p>
+                <button class="contact__btn">Contact</button>
+            </div>
+        </section>
     </main>
+
     <footer></footer>
+
 </body>
 </html>
 
