Added a Footer and did some simple styling to it to bring it as close as possible to the mock up template

--- a/index.html
+++ b/index.html
@@ -78,7 +78,44 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+       <section class="footer__wrapper wrapper">
+            <section class="footer__links__wrapper">
+                <div class="footer__links">
+                    <h3>Company</h3>
+                    <ul class="list__items">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Cookie Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer__links">
+                    <h3>Resources</h3>
+                    <ul class="list__items">
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Refer a Friend</a></li>
+                        <li><a href="#">Research Updates</a></li>
+                        <li><a href="#">ZOE Healthy Study</a></li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="SocialMedia__icons">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </section>
+
+       </section>
+
+       <hr>
+
+        <!-- This is where we need copyright symbol -->
+    </footer>
 
 </body>
 </html>
