Cleaned up some redundant code for the grid section

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
             <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, perspiciatis.</q>
         </blockquote>
 
-        <section class="mainContent__section1">
+        <section class="mainContent__section">
             <img src="https://images.unsplash.com/photo-1658314756410-bc606c1d9306?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="content_image">
-            <div class="mainContent__section1__description">
+            <div class="content_section">
                 <h2>Medicare Basic</h2>
                 <p class="basic__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nihil hic reprehenderit laboriosam accusantium autem corrupti eligendi sit quod quam dolor quaerat, praesentium tempore assumenda fugiat nesciunt? Vero, distinctio culpa!</p>
                 <button class="contact__btn">Contact</button>
             </div>
         </section>
 
-        <section class="mainContent__section2">
-            <div class="mainContent__section2__description">
+        <section class="mainContent__section">
+            <div class="content_section">
                 <h2>Long Term Basic Care</h2>
                 <p class="basic__info2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nihil hic reprehenderit laboriosam accusantium autem corrupti eligendi sit quod quam dolor quaerat, praesentium tempore assumenda fugiat nesciunt? Vero, distinctio culpa!</p>
                 <button class="contact__btn">Contact</button>
@@ -68,9 +68,9 @@
             <img src="https://images.unsplash.com/photo-1534630103086-5b1c106f74e0?q=80&w=2062&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Couple overlooking the lake holding hands" class="content_image">
         </section>
 
-        <section class="mainContent__section3">
+        <section class="mainContent__section">
             <img src="https://images.unsplash.com/photo-1605812830455-2fadc55bc4ba?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Father Holding child on his neck" class="content_image">
-            <div class="mainContent__section3__description">
+            <div class="content_section">
                 <h2>Life Policy</h2>
                 <p class="basic__info3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nihil hic reprehenderit laboriosam accusantium autem corrupti eligendi sit quod quam dolor quaerat, praesentium tempore assumenda fugiat nesciunt? Vero, distinctio culpa!</p>
                 <button class="contact__btn">Contact</button>
