Added some minor changes in addition to add a js file to project

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <script src="/src/main.js" defer></script>
     
     <title>Mock Up Insurance</title>
 </head>
@@ -37,7 +38,7 @@
         <section class="hero__section">
             <img src="https://images.unsplash.com/photo-1532329683184-6ffd13057d1c?q=80&w=1775&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Smiling Old Couple Walking in Yellow Flowers" class="hero__image">
             <div class="hero__overlay">
-                <p contenteditable="true">THIS IS A DEMO</p>
+                <p class="big__header">THIS IS A DEMO</p>
                 <p class="small__subheader">Place something here</p>
             </div>
         </section>
