messing around with the hero section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="hero__section">
             <img src="https://images.unsplash.com/photo-1532329683184-6ffd13057d1c?q=80&w=1775&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Smiling Old Couple Walking in Yellow Flowers" class="hero__image">
             <div class="hero__overlay">
-                <p class="big__header">THIS IS A DEMO</p>
+                <p class="big__header">Longevity</p>
                 <p class="small__subheader">Place something here</p>
             </div>
         </section>
