made some changes to the footer and added some transitions for the icon buttons.

--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
 
        </section>
 
-       <hr>
+       <hr class="wrapper">
 
-        <!-- This is where we need copyright symbol -->
+       <section class="copyrightSection wrapper">
+           <p>&copy;2023 Demo Insurance Co.</p>
+       </section>
     </footer>
 
 </body>
