--- a/index.html
+++ b/index.html
@@ -77,9 +77,15 @@
         </section>
 
         <section class="reviews__section">
+
+            <h3>Our Committment to our customers</h3>
+            
             <div class="cards__section wrapper">
-                <div>
+                <div class="review__card">
                     <img src="https://images.unsplash.com/photo-1634896941598-b6b500a502a7?q=80&w=2200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="profile__img">
+
+                    <p>Ashley Homes</p>
+
                 </div>
             </div>
         </section>
