Did some work on the card display for the reviews.

--- a/index.html
+++ b/index.html
@@ -81,12 +81,17 @@
             <h3 class="review__title">Our Committment to our customers</h3>
 
             <div class="cards__section wrapper">
+
                 <div class="review__card">
                     <img src="https://images.unsplash.com/photo-1634896941598-b6b500a502a7?q=80&w=2200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="profile__img">
 
-                    <p>Ashley Homes</p>
-
+                    <div class="customer__info">
+                        <p class="customer">Ashley Homes</p>
+                        <p class="city">San Francisco, Ca</p>
+                    </div>
+                    
                 </div>
+                
             </div>
         </section>
     </main>
