Did some work on the card display for the reviews.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@
                                   </svg>
                             </div>
                         </div>
+                    </div>
 
+                    <div class="card__body">
+                        <h3><strong>This company has changed my life.</strong></h3>
+
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi numquam dolores incidunt repudiandae, consequatur similique illo doloribus vitae quis qui odit obcaecati temporibus asperiores dolor nobis ratione natus iure praesentium.</p>
                     </div>
                 </div>
         </section>
