made changes to the card review.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
 
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi numquam dolores incidunt repudiandae, consequatur similique illo doloribus vitae quis qui odit obcaecati temporibus asperiores dolor nobis ratione natus iure praesentium.</p>
                     </div>
+
+                    <p class="date">December 1, 2023</p>
                 </div>
         </section>
     </main>
