added some more reviews for the webpage.

--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
                 </div>
 
                 <!-- user review -->
-                
+
                 <div class="review__card">
                     <div class="card__upper">
-                        <img src="https://images.unsplash.com/photo-1634896941598-b6b500a502a7?q=80&w=2200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="profile__img">
+                        <img src="https://images.unsplash.com/photo-1624561172888-ac93c696e10c?q=80&w=2189&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="profile__img">
 
                         <div class="customer__info">
-                            <p class="customer">Ashley Homes</p>
-                            <p class="city">San Francisco, Ca</p>
+                            <p class="customer">Joe Johnson</p>
+                            <p class="city">Aukland, NZ</p>
 
                             <div class="stars__section">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="stars__icon">
@@ -149,7 +149,7 @@
                     </div>
 
                     <div class="card__body">
-                        <h3><strong>This company has changed my life.</strong></h3>
+                        <h3><strong>Illuminating!</strong></h3>
 
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi numquam dolores incidunt repudiandae, consequatur similique illo doloribus vitae quis qui odit obcaecati temporibus asperiores dolor nobis ratione natus iure praesentium.</p>
                     </div>
@@ -160,11 +160,11 @@
 
                 <div class="review__card">
                     <div class="card__upper">
-                        <img src="https://images.unsplash.com/photo-1634896941598-b6b500a502a7?q=80&w=2200&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="profile__img">
+                        <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8ODJ8fGF2YXRhcnxlbnwwfHwwfHx8MA%3D%3D" alt="" class="profile__img">
 
                         <div class="customer__info">
-                            <p class="customer">Ashley Homes</p>
-                            <p class="city">San Francisco, Ca</p>
+                            <p class="customer">Alex Mosbey</p>
+                            <p class="city">San Ramon, CA</p>
 
                             <div class="stars__section">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="stars__icon">
