added some more reviews for the webpage.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </div>
 
                     <div class="card__body">
-                        <h3><strong>Illuminating!</strong></h3>
+                        <h3><strong>Illuminating! Truly life changing.</strong></h3>
 
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi numquam dolores incidunt repudiandae, consequatur similique illo doloribus vitae quis qui odit obcaecati temporibus asperiores dolor nobis ratione natus iure praesentium.</p>
                     </div>
@@ -187,7 +187,7 @@
                     </div>
 
                     <div class="card__body">
-                        <h3><strong>This company has changed my life.</strong></h3>
+                        <h3><strong>I reccomend this company to all my friends and family.</strong></h3>
 
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi numquam dolores incidunt repudiandae, consequatur similique illo doloribus vitae quis qui odit obcaecati temporibus asperiores dolor nobis ratione natus iure praesentium.</p>
                     </div>
