added some more reviews for the webpage.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
         </section>
 
-        <h3 class="review__title">Our Committment to our customers</h3>
+        <h3 class="review__title">Our Committment To Our Customers</h3>
 
         <section class="reviews__section">
 
