made some changes to layout.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     </header>
     
-    <main class="wrapper">
+    <main class="main__content wrapper">
         <!-- THis is block quote to divide the section from the rest of the content -->
         <blockquote class="blockQuote__1">
             <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, perspiciatis.</q>
