--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </blockquote>
 
         <section class="mainContent__section">
-            <img src="https://images.unsplash.com/photo-1658314756410-bc606c1d9306?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="content_image">
+            <img src="https://images.unsplash.com/photo-1658314756410-bc606c1d9306?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Lady smiling making coffee" class="content_image">
             <div class="content_section">
                 <h2>Medicare Basic</h2>
                 <p class="basic__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nihil hic reprehenderit laboriosam accusantium autem corrupti eligendi sit quod quam dolor quaerat, praesentium tempore assumenda fugiat nesciunt? Vero, distinctio culpa!</p>
