making a log in page.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#">Links</a></li>
                     <li><a href="#">Senior FAQs</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">Join Our Team</a></li>
+                    <li><a href="/joinOurTeam.html">Join Our Team</a></li>
                 </ul>
             </nav>
         </section>
