making a log in page.

--- a/joinOurTeam.html
+++ b/joinOurTeam.html
@@ -9,9 +9,33 @@
 </head>
 <body>
     <main>
-        <h2>Login Page</h2>
+        <div>
+            <img src="https://images.unsplash.com/photo-1596510914914-e14c6f59f925?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDB8fGZhbWlsaWVzfGVufDB8fDB8fHww" alt="">
+        </div>
 
-        <Div></Div>
+        <div>
+            <h2>Login Page</h2>
+
+            <div class="login">
+                <form id="login" method="get" action="login.php">
+                    <label><b>User Name</b></label>
+                    <input type="text" name="Uname" id="Uname" placeholder="Username">
+                    <br><br>
+
+                    <label><b>Password</b></label>
+                    <input type="Password" name="Pass" id="Pass" placeholder="Password">
+                    <br><br>
+                    
+                    <input type="button" name="log" id="log" value="Log In Here">
+                    <br><br>
+                    <input type="checkbox" id="check">
+                    <span>Remember me</span>
+                    <br><br>
+                    Forgot <a href="#">Password</a>
+                </form>
+            </div>
+        </div>
+       
     </main>
 </body>
 </html>
