--- a/joinOurTeam.html
+++ b/joinOurTeam.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <main>
-        <div>
-            <img src="https://images.unsplash.com/photo-1596510914914-e14c6f59f925?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDB8fGZhbWlsaWVzfGVufDB8fDB8fHww" alt="">
-        </div>
+        <!-- <div>
+            <img src="https://images.unsplash.com/photo-1688538586051-e285d3b3d7d6?q=80&w=2064&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="login__img">
+        </div> -->
 
-        <div>
+        <div class="login__wrapper">
             <h2>Login Page</h2>
 
             <div class="login">
