--- a/joinOurTeam.html
+++ b/joinOurTeam.html
@@ -19,11 +19,11 @@
             <div class="login">
                 <form id="login" method="get" action="login.php">
                     <label><b>User Name</b></label>
-                    <input type="text" name="Uname" id="Uname" placeholder="Username">
+                    <input type="text" name="Uname" id="Uname" placeholder="Username" class="inputFields" required>
                     <br><br>
 
                     <label><b>Password</b></label>
-                    <input type="Password" name="Pass" id="Pass" placeholder="Password">
+                    <input type="Password" name="Pass" id="Pass" placeholder="Password" required>
                     <br><br>
                     
                     <input type="button" name="log" id="log" value="Log In Here">
