making a log in page.

--- a/joinOurTeam.html
+++ b/joinOurTeam.html
@@ -18,16 +18,16 @@
             <h2>Login Page</h2>
 
             <div class="login">
-                <form id="login" method="get" action="login.php">
+                <form id="login" method="" action="">
                     <label><b>User Name</b></label>
                     <input type="text" name="Uname" id="Uname" placeholder="Username" class="inputFields" required>
                     <br><br>
 
                     <label><b>Password</b></label>
-                    <input type="Password" name="Pass" id="Pass" placeholder="Password" required>
+                    <input type="Password" name="Pass" id="Pass" placeholder="Password" class="inputFields" required>
                     <br><br>
                     
-                    <input type="button" name="log" id="log" value="Log In Here">
+                    <input type="button" name="log" id="log" value="Log In Here" class="login__btn">
                     <br><br>
                     <input type="checkbox" id="check">
                     <span>Remember me</span>
