making a log in page.

--- a/index.html
+++ b/index.html
@@ -388,11 +388,11 @@
 
        <hr class="wrapper">
 
-       <section class="copyrightSection wrapper">
+       <div class="copyrightSection wrapper">
            <p>&copy;2023 Demo Insurance Co.</p>
-       </section>
+       </div>
     </footer>
 
 </body>
 </html>
-       
+    
