Added a meet the team page.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="Navigation__Menu">
             <nav>
                 <ul>
-                    <li><a href="#">Meet Our Team</a></li>
+                    <li><a href="/meetTheTeam.html">Meet Our Team</a></li>
                     <li><a href="#">Medicare</a></li>
                     <li><a href="#">Events</a></li>
                     <li><a href="#">Links</a></li>
