--- a/meetTheTeam.html
+++ b/meetTheTeam.html
@@ -14,6 +14,22 @@
 <body>
     <main>
         <h1>The Team</h1>
+        <section class="team__wrapper">
+            <h2>Check Us Out</h2>
+
+            <div class="team_member">
+                <div class="team_member_roles">
+                    <h3>Joseph Rivers</h3>
+                    <h4>Insurance Agent</h4>
+                </div>
+                
+                <img src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzV8fGF2YXRhcnN8ZW58MHx8MHx8fDA%3D" alt="" class="team_member_img">
+            </div>
+
+            <div>
+
+            </div>
+        </section>
        
     </main>
 </body>
