--- a/meetTheTeam.html
+++ b/meetTheTeam.html
@@ -28,10 +28,64 @@
 
             <div class="team_members">
                 <div class="team_member_roles">
+                    <h3>James Carmicheal</h3>
+                    <h4>Sales Manager</h4>
+
+                    <img src="https://images.unsplash.com/photo-1649123245135-4db6ead931b5?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8ODR8fGF2YXRhcnN8ZW58MHx8MHx8fDA%3D" alt="" class="team_member_img">
+                </div>
+            </div>
+
+            <div class="team_members">
+                <div class="team_member_roles">
                     <h3></h3>
                     <h4></h4>
 
-                    <img src="" alt="">
+                    <img src="" alt="" class="team_member_img">
+                </div>
+            </div>
+
+            <div class="team_members">
+                <div class="team_member_roles">
+                    <h3></h3>
+                    <h4></h4>
+
+                    <img src="" alt="" class="team_member_img">
+                </div>
+            </div>
+
+            <div class="team_members">
+                <div class="team_member_roles">
+                    <h3></h3>
+                    <h4></h4>
+
+                    <img src="" alt="" class="team_member_img">
+                </div>
+            </div>
+
+            <div class="team_members">
+                <div class="team_member_roles">
+                    <h3></h3>
+                    <h4></h4>
+
+                    <img src="" alt="" class="team_member_img">
+                </div>
+            </div>
+
+            <div class="team_members">
+                <div class="team_member_roles">
+                    <h3></h3>
+                    <h4></h4>
+
+                    <img src="" alt="" class="team_member_img">
+                </div>
+            </div>
+
+            <div class="team_members">
+                <div class="team_member_roles">
+                    <h3></h3>
+                    <h4></h4>
+
+                    <img src="" alt="" class="team_member_img">
                 </div>
             </div>
             
