Working on cards for the team members.

--- a/meetTheTeam.html
+++ b/meetTheTeam.html
@@ -37,10 +37,10 @@
 
             <div class="team_members">
                 <div class="team_member_roles">
-                    <h3></h3>
-                    <h4></h4>
+                    <h3>Tiffany Lu</h3>
+                    <h4>Administrator</h4>
 
-                    <img src="" alt="" class="team_member_img">
+                    <img src="https://images.unsplash.com/photo-1568822617270-2c1579f8dfe2?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTE4fHxhdmF0YXJzfGVufDB8fDB8fHww" alt="" class="team_member_img">
                 </div>
             </div>
 
