--- a/meetTheTeam.html
+++ b/meetTheTeam.html
@@ -46,10 +46,10 @@
 
             <div class="team_members">
                 <div class="team_member_roles">
-                    <h3></h3>
-                    <h4></h4>
+                    <h3>Jordan Banks</h3>
+                    <h4>Marketing</h4>
 
-                    <img src="" alt="" class="team_member_img">
+                    <img src="https://images.unsplash.com/photo-1570158268183-d296b2892211?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjk1fHxhdmF0YXJzfGVufDB8fDB8fHww" alt="" class="team_member_img">
                 </div>
             </div>
 
